--- a/css/styles.css
+++ b/css/styles.css
@@ -326,6 +326,7 @@ body {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-column-gap: 45px;
+    grid-auto-rows: minmax(342px, auto);
     margin-top: 110px;
 }
 
@@ -333,13 +334,11 @@ body {
     border-radius: 13px;
     background: #0A0A0C;
     padding: 25px 16px 45px 16px;
-    height: 342px;
 }
 
 .services__link {
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
     align-items: center;
     height: 100%;
 }
@@ -347,6 +346,7 @@ body {
 .services__img {
     width: 82px;
     height: 82px;
+    margin-bottom: 15px;
 }
 
 .services__service-title {
@@ -354,6 +354,7 @@ body {
     text-align: center;
     font-size: 16px;
     font-weight: 900;
+    margin-bottom: 21px;
 }
 
 .services__info {
