--- a/css/styles.css
+++ b/css/styles.css
@@ -365,11 +365,134 @@ body {
     letter-spacing: -0.8px;
 }
 
-/*SECTION PORTFOLIO*/
+/* SECTION PORTFOLIO */
 .portfolio {
     padding-top: 110px;
     background: #161616;
     padding-bottom: 50px;
+}
+
+/* SECTION CONTACT */
+.contact {
+    padding-top: 90px;
+    background: #0F0F0F;
+    padding-bottom: 50px;
+}
+
+.main-title.contact__title {
+    text-align: center;
+}
+
+.contact__wrapper {
+    display: flex;
+    justify-content: space-between;
+    height: 400px;
+}
+
+.contact__contacts {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 55px 0 117px 36px;
+    background-image: url("../images/world-map.png");
+    background-position: center;
+    background-repeat: no-repeat;
+    width: 50%;
+}
+
+.contact__phone,
+.contact__location,
+.contact__email {
+    display: flex;
+    flex-direction: column;
+}
+
+.contact__phone a,
+.contact__location .location-subtext,
+.contact__email a {
+    color: #7B7B7B;
+    font-size: 14px;
+    font-weight: 600;
+}
+
+.contact__location {
+    margin-top: 39px;
+}
+
+.contact__box {
+    display: flex;
+    flex-direction: column;
+}
+
+.contact__mini-title {
+    color: #ECBC61;
+    font-size: 14px;
+    font-weight: 800;
+    margin-bottom: 5px;
+}
+
+.contact__form {
+    padding-top: 25px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-column-gap: 30px;
+    grid-row-gap: 10px;
+    width: 50%;
+}
+
+.contact__form input::placeholder,
+.contact__form textarea::placeholder {
+    color: #7B7B7B;
+    font-size: 14px;
+    font-weight: 600;
+}
+
+.contact__form input {
+    height: 56px;
+    border-radius: 71px;
+    background: #222;
+    border: none;
+    padding-left: 23px;
+    padding-right: 23px;
+    outline: none;
+    color: #7B7B7B;
+    width: 100%;
+}
+
+.contact__form textarea {
+    height: 180px;
+    border-radius: 24px;
+    background: #222;
+    border: none;
+    padding: 23px;
+    resize: none;
+    outline: none;
+    color: #7B7B7B;
+    width: 100%;
+}
+
+.contact__form button {
+    height: 56px;
+    grid-column-start: 2;
+    justify-self: end;
+    background-color: #ECBC61;
+    color: #FFF;
+    font-size: 14px;
+    font-weight: 600;
+    border: none;
+    border-radius: 71px;
+    cursor: pointer;
+    width: 245px;
+}
+
+#contact-subject {
+    grid-column-start: 1;
+    grid-column-end: 3;
+}
+
+#contact-message {
+    grid-column-start: 1;
+    grid-column-end: 3;
 }
 
 /*MEDIA*/
@@ -439,6 +562,25 @@ body {
     .portfolio {
         padding-top: 42px;
     }
+
+    /*SECTION CONTACT MEDIA(1024px)*/
+    .contact__wrapper {
+        flex-direction: column;
+        height: auto;
+    }
+
+    .contact__contacts {
+        width: 100%;
+    }
+
+    .contact__form {
+        width: 100%;
+    }
+
+    .contact__email {
+        margin-top: 90px;
+    }
+
 }
 
 @media (max-width: 767px) {
@@ -625,6 +767,17 @@ body {
     /*SECTION SERVICES MEDIA(767px)*/
     .services__list {
         grid-template-columns: 1fr;
+    }
+
+    /* SECTION CONTACT MEDIA(767px) */
+    #contact-name {
+        grid-column-start: 1;
+        grid-column-end: 3;
+    }
+
+    #contact-email {
+        grid-column-start: 1;
+        grid-column-end: 3;
     }
 }
 
