Added mobile version for Portfolio/Gallery page

--- a/css/styles.css
+++ b/css/styles.css
@@ -925,6 +925,10 @@ body {
     .main-title {
         font-size: 50px;
     }
+
+    .gallery__list {
+        grid-template-columns: 1fr;
+    }
 }
 
 /*Mobile first settings for Swipe slider*/
