--- a/css/styles.css
+++ b/css/styles.css
@@ -594,8 +594,10 @@ body {
 }
 
 /* PORTFOLIO(GALLERY) PAGE */
-.gallery .tabs__content {
+.gallery .portfolio__tabs {
     overflow: hidden;
+    padding-left: 5px;
+    padding-right: 5px;
 }
 
 .gallery__tabs {
