--- a/css/styles.css
+++ b/css/styles.css
@@ -397,7 +397,7 @@ body {
     cursor: pointer;
     border-radius: 27px;
     transition: all .2s linear;
-    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+    -webkit-tap-highlight-color: transparent;
 }
 
 .tabs__btns button:hover,
